now  modal has correct z-index, now ai modal closes again on ai change

--- a/app/css/_modal.scss
+++ b/app/css/_modal.scss
@@ -7,6 +7,7 @@
   right:0;
   overflow:auto;
   text-align:center;
+  z-index:10;
 }
 
 .modal-content {
